--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,35 @@
 version: "3.8"
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: ./docker/php/Dockerfile
+    volumes:
+      - ./laravel:/var/www/laravel
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      - vendor-store:/var/www/laravel/vendor
+      - php-fpm-socket:/var/run/php-fpm
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=${DB_NAME}
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASS}
+
+  nginx:
+    build:
+      context: .
+      dockerfile: ./docker/nginx/Dockerfile
+    depends_on:
+      - app
+    ports:
+      - 8080:80
+    volumes:
+      - ./laravel:/var/www/laravel
+      - ./docker/nginx/logs:/var/log/nginx
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - php-fpm-socket:/var/run/php-fpm
   node:
     build:
       context: ./docker/node
@@ -28,4 +58,6 @@ services:
 
 volumes:
   db-store:
+  php-fpm-socket:
+  vendor-store:
   node-modules-store:
