--- a/next/package.json
+++ b/next/package.json
@@ -10,15 +10,24 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.9",
+    "@auth0/auth0-react": "^1.9.0",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "@mui/styled-engine-sc": "^5.4.2",
+    "@types/recoil": "^0.0.9",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "recoil": "^0.6.1",
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.23",
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-react": "^7.28.0",
