--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/x-data-grid": "^5.5.1",
     "@types/recoil": "^0.0.9",
     "graphql": "^16.3.0",
     "next": "12.1.0",
