--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   backend:
     build:
@@ -7,11 +8,11 @@ services:
     volumes:
       - ./laravel:/var/www/laravel
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
-      - vendor-store:/var/www/laravel/vendor
+      - next-graphql-vendor-store:/var/www/laravel/vendor
       - php-fpm-socket:/var/run/php-fpm
     environment:
       - DB_CONNECTION=mysql
-      - DB_HOST=db
+      - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=${DB_NAME}
       - DB_USERNAME=${DB_USER}
@@ -22,7 +23,7 @@ services:
       context: .
       dockerfile: ./docker/nginx/Dockerfile
     depends_on:
-      - app
+      - backend
     ports:
       - 8080:80
     volumes:
@@ -37,7 +38,7 @@ services:
     tty: true
     volumes:
       - ./next:/var/www/next
-      # - node-modules-store:/var/www/next/node_modules
+      - next-graphql-node-modules-store:/var/www/next/node_modules
     ports:
       - "3000:3000"
 
@@ -57,8 +58,20 @@ services:
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - 8888:80
+    links:
+      - mysql
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+      - PMA_USER=${PMA_USER}
+      - PMA_PASSWORD=${PMA_PASSWORD}
+
 volumes:
   db-store:
   php-fpm-socket:
-  vendor-store:
-  # node-modules-store:
+  next-graphql-vendor-store:
+  next-graphql-node-modules-store:
