--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -13,7 +13,7 @@
     "fruitcake/laravel-cors": "^2.0.5",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^9.0",
-    "laravel/sanctum": "^2.14",
+    "laravel/passport": "^10.3",
     "laravel/tinker": "^2.7"
   },
   "require-dev": {
