--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -14,9 +14,12 @@
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^9.0",
     "laravel/passport": "^10.3",
-    "laravel/tinker": "^2.7"
+    "laravel/tinker": "^2.7",
+    "mll-lab/laravel-graphql-playground": "^2.6",
+    "nuwave/lighthouse": "^5.41"
   },
   "require-dev": {
+    "beyondcode/laravel-query-detector": "^1.6",
     "fakerphp/faker": "^1.9.1",
     "laravel/sail": "^1.0.1",
     "mockery/mockery": "^1.4.4",
