--- a/laravel/.env.sample
+++ b/laravel/.env.sample
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
+APP_GUZZLE_URL=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -52,3 +53,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TASK_LIST_COUNT=10
+
+PASSPORT_AUTH_TOKEN=
+PASSPORT_PERSONAL_CLIENT_SECRET=
+PASSPORT_PASSWORD_CLIENT_SECRET=
+ACCESS_CONTROLL_ALLOWED_ORIGINS=
